[package]
name = "starters"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
clonable-command = "0.1.0"
dark-light = "0.2.3"
# executable-finder = "0.2.2"
executable-finder = { git = "https://github.com/ModProg/executable-finder", branch = "fix-symlinks-unix" }
fuzzy-matcher = "0.3.7"
cushy = { git = "https://github.com/khonsulabs/cushy" }
# cushy = "0.4.0"
# gooey.path = "../gooey"
# iced = "0.4.2"
# iced = { git = "https://github.com/iced-rs/iced", version = "0.4.2" }
# iced_native = { git = "https://github.com/iced-rs/iced", version = "0.5.1" }
# gooey-core.path = "../gooey/crates/gooey-core/"
# gooey-widgets.path = "../gooey/crates/gooey-widgets/"
# gooey-kludgine.path = "../gooey/crates/gooey-kludgine/"
# gooey.path = "../gooey/"
# kludgine = "0.5.0"

# [patch."https://github.com/khonsulabs/kludgine"]
# kludgine.path = "../kludgine"
[patch."https://github.com/khonsulabs/appit"]
appit.path = "../appit"
